# wishlist-app

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml
backend/: pyproject.toml  requirements-dev.txt
backend/apps/core/: action_cookies.py  exceptions.py  models.py  permissions.py  serializers.py  throttling.py  urls.py  validators.py  views.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/core/tests/: test_api.py  test_health.py
backend/config/: settings.py  urls.py
docs/: PLAN.md  api.md  architecture.md  deployment.md  development.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.jsx  App.test.jsx  main.jsx  styles.css
skills/pre-pr-checks/: SKILL.md
skills/pre-pr-checks/scripts/: run_pre_pr_checks.sh
