[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wishlist-backend"
version = "0.1.0"
description = "Wishlist app backend"
requires-python = ">=3.10"
dependencies = [
    "django>=5.1,<5.2",
    "djangorestframework>=3.15.2,<3.16",
    "gunicorn>=22.0,<23",
    "django-cors-headers>=4.4,<5",
]

[tool.setuptools]
packages = ["config", "apps", "apps.core"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-q"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
